[sysconfig] Add option to toggle no homedir warnings

--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -57,6 +57,9 @@
     "lang_helpSystemConfiguration": "\u00dcber eine Systemkonfiguration wird die grundlegende Lokalisierung des bwLehrpool-Systems durchgef\u00fchrt. Dazu geh\u00f6ren Aspekte wie das Authentifizierungsverfahren f\u00fcr Benutzer (z.B. Active Directory, LDAP), Druckerkonfiguration, Home-Verzeichnisse, etc. Eine Systemkonfiguration setzt sich aus einem oder mehreren Konfigurationsmodulen zusammen, welche im angrenzenden Panel verwaltet werden k\u00f6nnen.",
     "lang_homeAttributeExplanation": "Bitte w\u00e4hlen Sie das Attribut, welches das Home-Verzeichnis der User enth\u00e4lt.",
     "lang_homeFallback": "Home-Fallback",
+    "lang_homeWarnAlways": "Immer warnen",
+    "lang_homeWarnNever": "Niemals warnen",
+    "lang_homeWarnNotDemo": "Bei allen Nutzern au\u00dfer \"demo\" warnen",
     "lang_homedirHandling": "(Home-)Verzeichnis Einbindung",
     "lang_inheritFromParentLoc": "Von \u00fcbergeordnetem Ort erben",
     "lang_ldapAttrMountOpts": "LDAP-Attribut f\u00fcr Mount-Optionen",
@@ -80,6 +83,8 @@
     "lang_newModule": "Neues Modul",
     "lang_noContent": "Kein Inhalt!",
     "lang_noHomeAttrFound": "Konnte kein Attribut finden, dass das Home-Verzeichnis zu enthalten scheint. Bitte manuell festlegen, wenn Einbindung gew\u00fcnscht.",
+    "lang_noHomeWarn": "Falls kein Home-Verzeichnis in VM",
+    "lang_noHomeWarnNote": "Standardm\u00e4\u00dfig wird dem Nutzer eine Nachricht angezeigt, wenn innerhalb der VM kein Home-Verzeichnis eingebunden werden konnte. Sie k\u00f6nnen diese Meldung hier komplett deaktivieren.",
     "lang_noModuleOfType": "Kein Modul dieser Art vorhanden.",
     "lang_noOpenPort": "Auf dem angegebenen Server wurde kein offener Port gefunden.",
     "lang_noValidCert": "Der Server besitzt kein oder ein nicht valides Zertifikat.",
