--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -57,6 +57,9 @@
     "lang_helpSystemConfiguration": "The fundamental localization of the bwLehrpool system is done through a system configuration. These include aspects such as the authentication method for users (eg Active Directory, LDAP), printer configuration, home directories, etc. A system configuration is composed of one or more configuration modules, which can be managed in the panel next to this one.",
     "lang_homeAttributeExplanation": "Please select the attribute which holds the user's home directory.",
     "lang_homeFallback": "Home fallback",
+    "lang_homeWarnAlways": "Always warn",
+    "lang_homeWarnNever": "Never warn",
+    "lang_homeWarnNotDemo": "For everyone but \"demo\"",
     "lang_homedirHandling": "(Home) directory handling",
     "lang_inheritFromParentLoc": "Inherit from parent location",
     "lang_ldapAttrMountOpts": "LDAP attribute containing mount options",
@@ -80,6 +83,8 @@
     "lang_newModule": "New Module",
     "lang_noContent": "No content!",
     "lang_noHomeAttrFound": "No home directory attribute found. Please specify it manually if you need home directories.",
+    "lang_noHomeWarn": "If no home directory in VM..",
+    "lang_noHomeWarnNote": "By default, a message box will be shown to the user if no home directory could be mounted inside the VM. With this setting, you can stop the message from ever showing up.",
     "lang_noModuleOfType": "No module of this type found.",
     "lang_noOpenPort": "There is no open LDAP port on this server.",
     "lang_noValidCert": "The server did not supply a certificate, or the certificate is invalid.",
