[statistics] Handle system an mainboard model separately
...especially for BIOS updates checks...

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -48,6 +48,7 @@
     "lang_maximumAbbrev": "Max.",
     "lang_memFree": "RAM frei (MB)",
     "lang_memoryStats": "Arbeitsspeicher",
+    "lang_mobomodel": "Mainboard",
     "lang_model": "Modell",
     "lang_modelCount": "Anzahl",
     "lang_modelName": "Modellname",
@@ -64,6 +65,7 @@
     "lang_partSize": "Gr\u00f6\u00dfe",
     "lang_partType": "Typ",
     "lang_partitionSize": "Gr\u00f6\u00dfe",
+    "lang_pcmodel": "PC-Modell",
     "lang_pendingSectors": "Potentiell defekte Sektoren",
     "lang_powerOnTime": "Betriebszeit",
     "lang_projector": "Beamer",
