--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -48,6 +48,7 @@
     "lang_maximumAbbrev": "max.",
     "lang_memFree": "RAM free (MB)",
     "lang_memoryStats": "Memory",
+    "lang_mobomodel": "Mainboard",
     "lang_model": "Model",
     "lang_modelCount": "Count",
     "lang_modelName": "Model name",
@@ -64,6 +65,7 @@
     "lang_partSize": "Size",
     "lang_partType": "Type",
     "lang_partitionSize": "Size",
+    "lang_pcmodel": "System model",
     "lang_pendingSectors": "Sectors pending reallocation",
     "lang_powerOnTime": "Power on time",
     "lang_projector": "Projector",
