[*] de: Script -> Skript

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -25,9 +25,9 @@
     "networkshare-saved": "Netzlaufwerk gespeichert",
     "no-expired-images": "Keine Abgelaufenen VM-Versionen",
     "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
-    "runscript-deleted": "Script gel\u00f6scht",
-    "runscript-invalid-id": "Ung\u00fcltige Script-ID: {{0}}",
-    "runscript-saved": "Script gespeichert",
+    "runscript-deleted": "Skript gel\u00f6scht",
+    "runscript-invalid-id": "Ung\u00fcltige Skript-ID: {{0}}",
+    "runscript-saved": "Skript gespeichert",
     "runtimelimits-config-saved": "Einstellungen gespeichert",
     "templates-saved": "Templates wurden gespeichert",
     "timeout": "Zeit\u00fcberschreitung",
