--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -34,6 +34,7 @@
     "lang_lastBoot": "Letzter Boot",
     "lang_lastLogin": "Letzer Login",
     "lang_lastSeen": "Zuletzt gesehen",
+    "lang_listDropdown": "Als Text",
     "lang_location": "Ort",
     "lang_logHeadline": "Logging",
     "lang_macAddr": "MAC-Adresse",
@@ -97,6 +98,7 @@
     "lang_subnet": "Subnetz",
     "lang_sureDeletePermanent": "M\u00f6chten Sie diese(n) Rechner wirklich unwiderruflich aus der Datenbank entfernen?\r\n\r\nWichtig: L\u00f6schen verhindert nicht, dass ein Rechner nach erneutem Starten von bwLehrpool wieder in die Datenbank aufgenommen wird.",
     "lang_sureReplaceNoUndo": "Wollen Sie die Daten der ausgew\u00e4hlten Rechner \u00fcbertragen? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
+    "lang_swap": "Swap",
     "lang_swapFree": "swap frei (MB)",
     "lang_tempPart": "Temp. Partition",
     "lang_tempPartStats": "Tempor\u00e4re Partition",
