--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -34,6 +34,7 @@
     "lang_lastBoot": "Last boot",
     "lang_lastLogin": "Last login",
     "lang_lastSeen": "Last seen",
+    "lang_listDropdown": "As text",
     "lang_location": "Location",
     "lang_logHeadline": "Logging",
     "lang_macAddr": "MAC address",
@@ -97,6 +98,7 @@
     "lang_subnet": "Subnet",
     "lang_sureDeletePermanent": "Are your sure you want to delete the selected machine(s) from the database? This cannot be undone.\r\n\r\nNote: Deleting machines from the database does not prevent booting up bwLehrpool again, which would recreate their respective database entries.",
     "lang_sureReplaceNoUndo": "Are you sure you want to replace the selected machine pairs? This action cannot be undone.",
+    "lang_swap": "swap",
     "lang_swapFree": "swap free (MB)",
     "lang_tempPart": "Temp. partition",
     "lang_tempPartStats": "Temporary partition",
