[news] Modularize; add 'login-news' category
TODO: Use date/time picker for expire time

--- a/modules-available/news/lang/de/messages.json
+++ b/modules-available/news/lang/de/messages.json
@@ -1,7 +1,8 @@
 {
-    "help-save-success": "Hilfe erfolgreich aktualisiert",
     "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
+    "invalid-type": "Ung\u00fcltiger Text-Typ: {{0}}",
     "news-del-success": "News gel\u00f6scht",
     "news-empty": "Es wurde keine News in der Datenbank gefunden",
-    "news-save-success": "News erfolgreich aktualisiert"
+    "news-save-success": "News erfolgreich aktualisiert",
+    "save-error": "Fehler beim Speichern"
 }
