--- a/modules-available/news/lang/de/module.json
+++ b/modules-available/news/lang/de/module.json
@@ -1,3 +1,7 @@
 {
-    "module_name": "vmChooser News"
+    "module_name": "News-\/Hilfetexte",
+    "page_title": "Neuigkeiten und Hilfetexte",
+    "type_help": "vmChooser Hilfe",
+    "type_login-news": "Loginmaske",
+    "type_news": "vmChooser News"
 }
