--- a/modules-available/news/lang/en/messages.json
+++ b/modules-available/news/lang/en/messages.json
@@ -1,7 +1,8 @@
 {
-    "help-save-success": "Help updated successfully",
     "invalid-action": "Invalid action: {{0}}",
+    "invalid-type": "Invalid text type: {{0}}",
     "news-del-success": "News deleted",
     "news-empty": "There was no news found in the database",
-    "news-save-success": "News updated successfully"
+    "news-save-success": "News updated successfully",
+    "save-error": "Error saving entry"
 }
