--- a/modules-available/news/lang/en/template-tags.json
+++ b/modules-available/news/lang/en/template-tags.json
@@ -3,13 +3,13 @@
     "lang_content": "Content",
     "lang_created": "Created",
     "lang_expires": "Expires",
+    "lang_expiryDate": "Expiry date",
+    "lang_infiniteDuration": "Never expires",
     "lang_introText": "Here you can define news, help and other informational texts to be displayed in different places in the running MiniLinux system.",
     "lang_lastUpdate": "Last update",
-    "lang_leaveEmptyInfinite": "0\/empty means infinite",
     "lang_mainHeading": "News and help texts",
     "lang_previousEntries": "Previous entries",
     "lang_show": "Show",
     "lang_title": "Title",
-    "lang_titlePh": "Headline for Text",
-    "lang_validityHours": "Validity in hours"
+    "lang_titlePh": "Headline for Text"
 }
