[locationinfo] Add ability to select the start day of the calendar

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -15,6 +15,7 @@
     "lang_countRoomplan": "über Raumplaner",
     "lang_createPanel": "Panel anlegen",
     "lang_credentials": "Anmeldung",
+    "lang_currentDay": "Aktueller Tag",
     "lang_day": "Tag",
     "lang_daysToShow": "Tage",
     "lang_daysToShowTooltip": "Legt die Anzahl an Tagen im Kalender fest, die angezeigt werden",
@@ -35,6 +36,7 @@
     "lang_for": "f\u00fcr",
     "lang_fourLocsHint": "Hier k\u00f6nnen Sie bis zu vier Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
     "lang_free": "Ge\u00f6ffnet",
+    "lang_friday": "Freitag",
     "lang_general": "Allgemein",
     "lang_generalSettings": "Allgemeine Einstellungen",
     "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
@@ -62,6 +64,7 @@
     "lang_mode3": "Raum",
     "lang_mode4": "Wechselnd",
     "lang_modeTooltip": "Die Anzeigemodi, welche das Frontend unterst\u00fctzt",
+    "lang_monday": "Montag",
     "lang_monTilFr": "Montag - Freitag",
     "lang_nameTooltip": "Legt den Namen des Servers fest",
     "lang_noLocationsWarning": "Bitte w\u00e4hlen Sie mindestens einen Ort aus, der vom Panel angezeigt werden soll.",
@@ -118,11 +121,15 @@
     "lang_shortWed": "Mi",
     "lang_shortWednesday": "Mi",
     "lang_showLog": "Log",
+    "lang_startDay": "Start Tag",
+    "lang_startDayTooltip": "Der Wochentag an dem der Kalender anfängt",
     "lang_summaryPanel": "\u00dcbersichts-Panel",
     "lang_summaryUpdateIntervalTooltip": "Aktualisierungsintervall (Sekunden)",
     "lang_sunday": "Sonntag",
     "lang_switchTime": "Wechselintervall",
     "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein Wechsel erfolgt (in Sekunden)",
+    "lang_thuesday": "Dienstag",
+    "lang_thursday": "Donnerstag",
     "lang_to": "bis",
     "lang_typeTooltip": "Legt fest um welchen Server-Typ es sich handelt",
     "lang_updateRates": "Aktualisierungsintervall",
@@ -135,5 +142,6 @@
     "lang_useRoomplanner": "Rechner zählen",
     "lang_vertical": "Vertikaler Modus",
     "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen",
+    "lang_wednesday": "Mittwoch",
     "lang_when": "Wann"
 }
