--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -15,6 +15,7 @@
     "lang_countRoomplan": "by Roomplanner",
     "lang_createPanel": "Create panel",
     "lang_credentials": "Login",
+    "lang_currentDay": "Current Day",
     "lang_day": "Day",
     "lang_daysToShow": "Days",
     "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
@@ -35,6 +36,7 @@
     "lang_for": "for",
     "lang_fourLocsHint": "You can pick up to four locations that will be shown in this panel.",
     "lang_free": "Open",
+    "lang_friday": "Friday",
     "lang_general": "General",
     "lang_generalSettings": "General Settings",
     "lang_ignoreSslTooltip": "Accept invalid, expired or self-signed ssl certificates",
@@ -62,6 +64,7 @@
     "lang_mode3": "Room",
     "lang_mode4": "Switching",
     "lang_modeTooltip": "The display modes the frontend supports",
+    "lang_monday": "Monday",
     "lang_monTilFr": "Monday - Friday",
     "lang_nameTooltip": "Defines the name of the server",
     "lang_noLocationsWarning": "Please select at least one location this panel should display.",
@@ -118,11 +121,15 @@
     "lang_shortWed": "Wed",
     "lang_shortWednesday": "Wed",
     "lang_showLog": "Log",
+    "lang_startDay": "Start Day",
+    "lang_startDayTooltip": "The day of the week at which the calendar starts",
     "lang_summaryPanel": "Summary panel",
     "lang_summaryUpdateIntervalTooltip": "Update interval (seconds)",
     "lang_sunday": "Sunday",
     "lang_switchTime": "Switchtime",
     "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
+    "lang_thuesday": "Thuesday",
+    "lang_thursday": "Thursday",
     "lang_to": "to",
     "lang_typeTooltip": "Defines on which type of server you want to connect to",
     "lang_updateRates": "Update rates",
@@ -135,5 +142,6 @@
     "lang_useRoomplanner": "Count PCs",
     "lang_vertical": "Vertical mode",
     "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other",
+    "lang_wednesday": "Wednesday",
     "lang_when": "When"
 }
