--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -11,21 +11,31 @@
     "lang_editConfigVariables": "Konfig.-Variablen",
     "lang_editRoomplan": "Raumplan bearbeiten",
     "lang_endAddress": "Endadresse",
+    "lang_fixMachineAssign": "Zuweisungen anzeigen\/aufheben",
+    "lang_ip": "IP-Adresse",
     "lang_listOfSubnets": "Liste der Subnetze",
     "lang_location": "Ort",
+    "lang_locationBySubnet": "Zugeh\u00f6rigkeit durch IP-Adresse",
     "lang_locationInfo": "Details zu diesem Ort",
+    "lang_locationMismatch": "Fehlerhafte Rechnerzuweisung durch Raumplaner",
     "lang_locationName": "Name",
     "lang_locationOtherOverlap": "Achtung! Folgende Orte haben sich \u00fcberlappende Netzbereiche",
     "lang_locationSelfOverlap": "Folgender Ort hat mehrere sich \u00fcberschneidende Netzbereiche",
     "lang_locationSettings": "Raum\/Ort bearbeiten",
     "lang_locationsMainHeading": "Verwaltung von R\u00e4umen\/Orten",
+    "lang_machine": "Rechner",
     "lang_machineCount": "Rechner",
     "lang_machineLoad": "Besetzt",
     "lang_matchingMachines": "Enthaltene Rechner",
+    "lang_mismatchHeading": "Rechner mit widerspr\u00fcchlicher Raumzuweisung",
+    "lang_mismatchIntroText": "Die hier aufgelisteten Rechner wurden mittels des Raumplaners im oben genannten Raum platziert. Ihrer IP-Adresse nach fallen diese jedoch in einen anderen Raum (durch die f\u00fcr diesen definierten IP-Ranges). Wenn Sie die entsprechenden Rechner hier markieren und auf \"Zur\u00fccksetzen\" klicken, werden die Rechner aus dem oben genannten Raumplan entfernt. Wenn Sie stattdessen auf \"Verschieben\" klicken, werden die Rechner mit ihrer aktuellen Position aus dem jetzigen Raum in den eigentlichen Raum (siehe letzte Spalte der Tabelle) verschoben.",
+    "lang_moveMachines": "In durch Subnet zugeordneten Raum verschieben",
+    "lang_moveable": "Verschiebbar",
     "lang_name": "Name",
     "lang_overrideCount": "Angepasst",
     "lang_parentLocation": "\u00dcbergeordneter Ort",
     "lang_referencingLectures": "Veranstaltungen",
+    "lang_resetMachines": "Raumzuweisung zur\u00fccksetzen",
     "lang_showRoomplan": "Raumplan anzeigen",
     "lang_startAddress": "Startadresse",
     "lang_subnet": "IP-Bereich",
