--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -11,21 +11,31 @@
     "lang_editConfigVariables": "Config vars",
     "lang_editRoomplan": "Edit roomplan",
     "lang_endAddress": "End address",
+    "lang_fixMachineAssign": "Fix or remove assignment",
+    "lang_ip": "IP address",
     "lang_listOfSubnets": "List of subnets",
     "lang_location": "Location",
+    "lang_locationBySubnet": "Location by IP address",
     "lang_locationInfo": "Location details",
+    "lang_locationMismatch": "Mismatching assignment via room planner",
     "lang_locationName": "Name",
     "lang_locationOtherOverlap": "Warning! These locations have overlapping address ranges",
     "lang_locationSelfOverlap": "The following location has multiple address ranges that are overlapping",
     "lang_locationSettings": "Edit this room or location",
     "lang_locationsMainHeading": "Manage rooms and locations",
+    "lang_machine": "Machine",
     "lang_machineCount": "Clients",
     "lang_machineLoad": "In use",
     "lang_matchingMachines": "Matching clients",
+    "lang_mismatchHeading": "Machines with mismatching room plan assignment",
+    "lang_mismatchIntroText": "Machines listed here are assigned to the room above, but judging from their IP address, should actually be in another room (because of the IP range(s) assigned to that room). By selecting machines below and clicking \"reset\", they will be removed from their current room plan. If you choose \"move\", they will be transferred to the plan of the room they should actually belong to (see last column of table).",
+    "lang_moveMachines": "Move to room designated by IP address",
+    "lang_moveable": "Moveable",
     "lang_name": "Name",
     "lang_overrideCount": "Overridden",
     "lang_parentLocation": "Parent location",
     "lang_referencingLectures": "Assigned Lectures",
+    "lang_resetMachines": "Reset room assignment",
     "lang_showRoomplan": "Show room plan",
     "lang_startAddress": "Start address",
     "lang_subnet": "IP range",
